# Liger2LiGer

./: .gitignore  CMakeLists.txt  README.md
inc/: AlignmentChain.hpp  Bam.hpp  PafAlignmentChain.hpp  PafElement.hpp  Sam.hpp
scripts/: evaluate_chimeras.py  extract_reads_from_fastq.py  filter_paf_by_read_name.py  generate_chimer_stats.py
scripts/modules/: Fastx.py
src/: AlignmentChain.cpp  Bam.cpp  PafAlignmentChain.cpp  PafElement.cpp  Sam.cpp
src/executable/: filter_chimeras_from_alignment.cpp  filter_chimeras_from_paf.cpp
